--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   font-weight: bold;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 
 }
 
