--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -1,5 +1,3 @@
-
-  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,10 +14,12 @@
     <link rel="stylesheet" href="/static/libs/timepicker.css" />
 
     <style>
-        td, th {
-            font-size: 12.5px;
+        td,
+        th {
+            font-size: 11.5px;
 
         }
+
         .chip {
 
             padding: 0 10px;
@@ -57,33 +57,43 @@
 
 <body>
     <div class="mydiv">
-        <nav id="navbar" class="navbar navbar-light" style="background-color: blueviolet;border-radius: 0 0 30px 0;">
-            <a class="navbar-brand" href="#">
-                <img src="/static/components/icon.png" width="30" height="30" alt="" loading="lazy">
+        <nav id="navbar" class="navbar navbar-light"
+            style="background-color:rgb(43, 129, 228);border-radius: 0 0 30px 0;">
+
+            <a class="navbar-brand" href="http://127.0.0.1:5015/dashboard" style='color:white'>
+                <!-- <img src="/static/components/icon.png" width="30" height="30" alt="" loading="lazy"> -->
+                <strong> ERROR LOG DASHBOARD </strong>
             </a>
+            
+                <div class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search something" aria-label="Search" id='query'>
+                </div>
+            
         </nav>
         <nav class="nav nav-pills nav-fill" style="margin-left: 5%;margin-top: 20px;">
-            <button title="Add Filters here" type="button" id="add-modal" class="btn btn-warning" data-target="#staticBackdrop"
-                data-toggle="modal"
-                style='border-radius: 30px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 800; font-size: large; color: white;'><img
-                    id='image' src='/static/components/plus.png' width='25px' style="margin-right: 5px;"></img>Add
+            <button title="Add Filters here" type="button" id="add-modal" class="btn btn-warning"
+                data-target="#staticBackdrop" data-toggle="modal"
+                style='border-radius: 10px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 550; font-size: large; color: white;'><img
+                    id='image' src='/static/components/plus.png' width='25px' style="margin-right: 5px;"></img>
                 Filter</button>
-            <button type="button" id="visual" class="btn btn-primary" data-target="#chartModal" data-toggle="modal"
-                style='border-radius: 30px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 800; font-size: large; color: white;'><img
+            <button type="button" id="visual" class="btn btn-warning" data-target="#chartModal" data-toggle="modal"
+                style='border-radius: 10px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 550; font-size: large; color: white;'><img
                     id='image' src='/static/components/analysis.png' width='25px'
-                    style="margin-right: 5px;"></img>Visualise</button>
-            <h5 style="margin-top: 16px;padding-left: 20px;">Start Date</h5>
+                    style="margin-right: 5px;"></img>Visualize</button>
+            <!-- <h5 style="margin-top: 16px;padding-left: 20px;font-size:18px">Start Period</h5> -->
+            <h6 style="margin-top: 20px;margin-left: 20px;">Start Date-Time</h6>
             <input type="text" id="datepicker" data-toggle="tooltip" data-placement="top" title="Enter Start Date-Time"
-                placeholder="Start Date-time" required="required" style="height: min-content; margin-top: 15px;border-radius: 20px;border-color: black;transform:none;
+                placeholder="Start Date-time" required="required" style="height: min-content; margin-top: 15px;border-radius: 10px;border-color: black;transform:none;
         outline:none;background:transparent;padding-left: 10px;margin-left: 10px;text-align: center;">
-            <h5 style="margin-top: 16px;padding-left: 20px;">End Date</h5>
+            <!-- <h5 style="margin-top: 16px;padding-left: 20px;font-size:18px">End Period</h5> -->
+            <h6 style="margin-top: 20px;margin-left: 20px;">End Date-Time</h6>
             <input autocomplete="off" type="text" id="datepicker1" data-toggle="tooltip" data-placement="top"
-                title="Enter End Date-Time" placeholder="End Date-time" required="required" style="height: min-content; margin-top: 15px;border-radius: 20px;border-color: black;transform:none;
+                title="Enter End Date-Time" placeholder="End Date-time" required="required" style="height: min-content; margin-top: 15px;border-radius: 10px;border-color: black;transform:none;
         outline:none;background:transparent;padding-left: 10px;margin-left: 10px;text-align: center;">
-        
-            <button class="btn btn-success" type="button" id="apply"
-                style='border-radius: 30px;margin-left: 60px;margin-top:10px;margin-bottom:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 400; font-size: large; color: white;'>
-                Apply Changes
+
+            <button class="btn btn-primary" type="button" id="apply"
+                style='border-radius: 10px;margin-left: 30px;margin-top:10px;margin-bottom:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 500; font-size: large; color: white;'>
+                Apply
 
             </button>
         </nav>
@@ -154,7 +164,7 @@
                 </div>
                 <div class="modal-body">
                     <canvas id="myChart">
-                        
+
                     </canvas>
                 </div>
             </div>
@@ -233,13 +243,12 @@
                 document.getElementById('apply').click()
         }
     </script>
-    <script>
+    <!-- <script>
        document.getElementById('visual').addEventListener('click', function (e){
         console.log(e)
        });
-    </script>
-    
+    </script> -->
+
 </body>
 
 </html>
-
