--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klog</title>
+    <title>Error Log Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" /> -->
@@ -12,13 +12,20 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.min.css" /> -->
     <link rel="stylesheet" href="/static/libs/jqueryui.css" />
     <link rel="stylesheet" href="/static/libs/timepicker.css" />
+    <link rel="stylesheet" src="extensions/sticky-header/bootstrap-table-sticky-header.css">
+
 
     <style>
-        td,
-        th {
-            font-size: 11.5px;
+        td {
+            font-size: 12.5px;
 
         }
+        th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
 
         .chip {
 
@@ -151,20 +158,20 @@
             </div>
         </div>
     </div>
-
+    <!-- legendText: "{indexLabel}" -->
     <div class="modal fade" id="chartModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Charts</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Distribution of Exceptions</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <canvas id="myChart">
-
+                        <!-- <legend></legend> -->
                     </canvas>
                 </div>
             </div>
@@ -248,6 +255,7 @@
         console.log(e)
        });
     </script> -->
+    <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
 
 </body>
 
