--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -69,7 +69,7 @@
 
             <a class="navbar-brand" href="http://127.0.0.1:5015/dashboard" style='color:white'>
                 <img src="/static/components/dell.png" width="30" height="30" alt="" loading="lazy">
-                <strong> ERROR LOG DASHBOARD </strong>
+                <strong style='font-size: 18px'> ERROR LOG DASHBOARD </strong>
             </a>
             
                 <div class="form-inline my-2 my-lg-0">
@@ -81,11 +81,11 @@
             <button title="Add Filters here" type="button" id="add-modal" class="btn btn-primary"
                 data-target="#staticBackdrop" data-toggle="modal"
                 style='border-radius: 10px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 550; font-size: large; color: white;'><img
-                    id='image' src='/static/components/plus2.png' width='25px' style="margin-right: 5px;"></img>
+                    id='image' src='/static/components/filter.png' width='35px' style="margin-right: 5px;"></img>
                 Filter</button>
             <button type="button" id="visual" class="btn btn-primary" data-target="#chartModal" data-toggle="modal"
                 style='border-radius: 10px;margin:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 550; font-size: large; color: white;'><img
-                    id='image' src='/static/components/pie2.png' width='25px'
+                    id='image' src='/static/components/visual.png' width='25px'
                     style="margin-right: 5px;"></img>Visualize</button>
             <!-- <h5 style="margin-top: 16px;padding-left: 20px;font-size:18px">Start Period</h5> -->
             <h6 style="margin-top: 20px;margin-left: 20px;">Start Date-Time</h6>
@@ -99,7 +99,7 @@
         outline:none;background:transparent;padding-left: 10px;margin-left: 10px;text-align: center;">
 
             <button class="btn btn-primary" type="button" id="apply"
-                style='border-radius: 10px;margin-left: 30px;margin-top:10px;margin-bottom:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 500; font-size: large; color: white;'>
+                style='border-radius: 10px;margin-left: 30px;margin-top:10px;margin-bottom:10px;vertical-align: middle;font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; font-style: normal; font-weight: 550; font-size: large; color: white;'>
                 Apply
 
             </button>
